// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entries.actions entriesClearAll() clears the current entries 1`] = `
Array [
  Object {
    "entries": Immutable.OrderedMap {},
    "type": "ENTRIES_SET_ALL",
  },
  Object {
    "filterTitle": "All",
    "filteredEntries": Immutable.OrderedMap {},
    "type": "FILTER_SET_DATA",
  },
]
`;

exports[`entries.actions entriesGetForFeed() fetches and ammends entries 1`] = `
Array [
  Object {
    "entries": Immutable.OrderedMap {
      "5b33c76cb2438d5708dc197f": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc197f",
        "content": "<p>Content for Stuff The Internet Says On Scalability For June 22nd, 2018</p>",
        "content_snippet": "<p>Content for Stuff The Internet Says On Scalability For June 22nd, 2018</p>",
        "creator": "Todd Hoff",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36082622",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/uqbrISxcA-E/stuff-the-internet-says-on-scalability-for-june-22nd-2018.html",
        "publish_date": "2018-06-22T15:56:46.000Z",
        "timeAgo": "21 days ago",
        "title": "Stuff The Internet Says On Scalability For June 22nd, 2018",
      },
      "5b33c76cb2438d5708dc1981": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc1981",
        "content": "<p>Content for Sponsored Post: Datadog, InMemory.Net, Triplebyte, Etleap, Scalyr, MemSQL</p>",
        "content_snippet": "<p>Content for Sponsored Post: Datadog, InMemory.Net, Triplebyte, Etleap, Scalyr, MemSQL</p>",
        "creator": "Todd Hoff",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36081782",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/gKe2fkOoT0I/sponsored-post-datadog-inmemorynet-triplebyte-etleap-scalyr.html",
        "publish_date": "2018-06-19T16:10:13.000Z",
        "timeAgo": "24 days ago",
        "title": "Sponsored Post: Datadog, InMemory.Net, Triplebyte, Etleap, Scalyr, MemSQL",
      },
      "5b33c76cb2438d5708dc1983": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc1983",
        "content": "<p>Content for How Ably Efficiently Implemented Consistent Hashing</p>",
        "content_snippet": "<p>Content for How Ably Efficiently Implemented Consistent Hashing</p>",
        "creator": "Todd Hoff",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36081325",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/EU6Dy48k59o/how-ably-efficiently-implemented-consistent-hashing.html",
        "publish_date": "2018-06-18T16:06:17.000Z",
        "timeAgo": "25 days ago",
        "title": "How Ably Efficiently Implemented Consistent Hashing",
      },
      "5b33c76cb2438d5708dc1985": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc1985",
        "content": "<p>Content for June 15th, 2018</p>",
        "content_snippet": "<p>Content for June 15th, 2018</p>",
        "creator": "Todd Hoff",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36079455",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/sacuGsRa2G0/stuff-the-internet-says-on-scalability-for-june-15th-2018.html",
        "publish_date": "2018-06-15T15:57:00.000Z",
        "timeAgo": "a month ago",
        "title": "Stuff The Internet Says On Scalability For June 15th, 2018",
      },
      "5b33c76cb2438d5708dc1987": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc1987",
        "content": "<p>Content for Open Source Database HA Resources from Severalnines</p>",
        "content_snippet": "<p>Content for Open Source Database HA Resources from Severalnines</p>",
        "creator": "Forrest Lymburner",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36078004",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/FFJQudxO2bU/open-source-database-ha-resources-from-severalnines.html",
        "publish_date": "2018-06-08T19:46:22.000Z",
        "timeAgo": "a month ago",
        "title": "Open Source Database HA Resources from Severalnines",
      },
    },
    "type": "ENTRIES_SET_ALL",
  },
  Object {
    "filterTitle": "All",
    "filteredEntries": Immutable.OrderedMap {},
    "type": "FILTER_SET_DATA",
  },
  Object {
    "type": "FEEDS_SET_UNREAD",
    "unreadMap": Object {
      "entriesCounted": Immutable.Set [
        "5b33c76cb2438d5708dc197f",
        "5b33c76cb2438d5708dc1981",
        "5b33c76cb2438d5708dc1983",
        "5b33c76cb2438d5708dc1985",
        "5b33c76cb2438d5708dc1987",
      ],
      "feeds": Immutable.Map {
        "5b33c76cb2438d5708dc197e": 5,
      },
      "folders": Immutable.Map {
        "5b33c57eb2438d5708dc1968": 5,
      },
    },
  },
]
`;

exports[`entries.actions entryUpdateHasRead() marks an entry read 1`] = `
Array [
  Object {
    "type": "FEEDS_SET_UNREAD",
    "unreadMap": Object {
      "entriesCounted": Immutable.Set [
        "5b33c76cb2438d5708dc197f",
        "5b33c76cb2438d5708dc1981",
        "5b33c76cb2438d5708dc1983",
        "5b33c76cb2438d5708dc1985",
        "5b33c76cb2438d5708dc1987",
      ],
      "feeds": Immutable.Map {
        "5b33c76cb2438d5708dc197e": 4,
      },
      "folders": Immutable.Map {
        "5b33c57eb2438d5708dc1968": 4,
      },
    },
  },
  Object {
    "entries": Immutable.OrderedMap {
      "5b33c76cb2438d5708dc197f": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc197f",
        "content": "<p>Content for Stuff The Internet Says On Scalability For June 22nd, 2018</p>",
        "content_snippet": "<p>Content for Stuff The Internet Says On Scalability For June 22nd, 2018</p>",
        "creator": "Todd Hoff",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36082622",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/uqbrISxcA-E/stuff-the-internet-says-on-scalability-for-june-22nd-2018.html",
        "publish_date": "2018-06-22T15:56:46.000Z",
        "timeAgo": "21 days ago",
        "title": "Stuff The Internet Says On Scalability For June 22nd, 2018",
      },
      "5b33c76cb2438d5708dc1981": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc1981",
        "content": "<p>Content for Sponsored Post: Datadog, InMemory.Net, Triplebyte, Etleap, Scalyr, MemSQL</p>",
        "content_snippet": "<p>Content for Sponsored Post: Datadog, InMemory.Net, Triplebyte, Etleap, Scalyr, MemSQL</p>",
        "creator": "Todd Hoff",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36081782",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/gKe2fkOoT0I/sponsored-post-datadog-inmemorynet-triplebyte-etleap-scalyr.html",
        "publish_date": "2018-06-19T16:10:13.000Z",
        "timeAgo": "24 days ago",
        "title": "Sponsored Post: Datadog, InMemory.Net, Triplebyte, Etleap, Scalyr, MemSQL",
      },
      "5b33c76cb2438d5708dc1983": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc1983",
        "content": "<p>Content for How Ably Efficiently Implemented Consistent Hashing</p>",
        "content_snippet": "<p>Content for How Ably Efficiently Implemented Consistent Hashing</p>",
        "creator": "Todd Hoff",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36081325",
        "has_read": true,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/EU6Dy48k59o/how-ably-efficiently-implemented-consistent-hashing.html",
        "publish_date": "2018-06-18T16:06:17.000Z",
        "timeAgo": "25 days ago",
        "title": "How Ably Efficiently Implemented Consistent Hashing",
      },
      "5b33c76cb2438d5708dc1985": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc1985",
        "content": "<p>Content for June 15th, 2018</p>",
        "content_snippet": "<p>Content for June 15th, 2018</p>",
        "creator": "Todd Hoff",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36079455",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/sacuGsRa2G0/stuff-the-internet-says-on-scalability-for-june-15th-2018.html",
        "publish_date": "2018-06-15T15:57:00.000Z",
        "timeAgo": "a month ago",
        "title": "Stuff The Internet Says On Scalability For June 15th, 2018",
      },
      "5b33c76cb2438d5708dc1987": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc1987",
        "content": "<p>Content for Open Source Database HA Resources from Severalnines</p>",
        "content_snippet": "<p>Content for Open Source Database HA Resources from Severalnines</p>",
        "creator": "Forrest Lymburner",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36078004",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/FFJQudxO2bU/open-source-database-ha-resources-from-severalnines.html",
        "publish_date": "2018-06-08T19:46:22.000Z",
        "timeAgo": "a month ago",
        "title": "Open Source Database HA Resources from Severalnines",
      },
    },
    "type": "ENTRIES_SET_ALL",
  },
  Object {
    "filterTitle": "All",
    "filteredEntries": Immutable.OrderedMap {
      "5b33c76cb2438d5708dc197f": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc197f",
        "content": "<p>Content for Stuff The Internet Says On Scalability For June 22nd, 2018</p>",
        "content_snippet": "<p>Content for Stuff The Internet Says On Scalability For June 22nd, 2018</p>",
        "creator": "Todd Hoff",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36082622",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/uqbrISxcA-E/stuff-the-internet-says-on-scalability-for-june-22nd-2018.html",
        "publish_date": "2018-06-22T15:56:46.000Z",
        "timeAgo": "21 days ago",
        "title": "Stuff The Internet Says On Scalability For June 22nd, 2018",
      },
      "5b33c76cb2438d5708dc1981": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc1981",
        "content": "<p>Content for Sponsored Post: Datadog, InMemory.Net, Triplebyte, Etleap, Scalyr, MemSQL</p>",
        "content_snippet": "<p>Content for Sponsored Post: Datadog, InMemory.Net, Triplebyte, Etleap, Scalyr, MemSQL</p>",
        "creator": "Todd Hoff",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36081782",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/gKe2fkOoT0I/sponsored-post-datadog-inmemorynet-triplebyte-etleap-scalyr.html",
        "publish_date": "2018-06-19T16:10:13.000Z",
        "timeAgo": "24 days ago",
        "title": "Sponsored Post: Datadog, InMemory.Net, Triplebyte, Etleap, Scalyr, MemSQL",
      },
      "5b33c76cb2438d5708dc1983": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc1983",
        "content": "<p>Content for How Ably Efficiently Implemented Consistent Hashing</p>",
        "content_snippet": "<p>Content for How Ably Efficiently Implemented Consistent Hashing</p>",
        "creator": "Todd Hoff",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36081325",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/EU6Dy48k59o/how-ably-efficiently-implemented-consistent-hashing.html",
        "publish_date": "2018-06-18T16:06:17.000Z",
        "timeAgo": "25 days ago",
        "title": "How Ably Efficiently Implemented Consistent Hashing",
      },
      "5b33c76cb2438d5708dc1985": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc1985",
        "content": "<p>Content for June 15th, 2018</p>",
        "content_snippet": "<p>Content for June 15th, 2018</p>",
        "creator": "Todd Hoff",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36079455",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/sacuGsRa2G0/stuff-the-internet-says-on-scalability-for-june-15th-2018.html",
        "publish_date": "2018-06-15T15:57:00.000Z",
        "timeAgo": "a month ago",
        "title": "Stuff The Internet Says On Scalability For June 15th, 2018",
      },
      "5b33c76cb2438d5708dc1987": Object {
        "__v": 0,
        "_id": "5b33c76cb2438d5708dc1987",
        "content": "<p>Content for Open Source Database HA Resources from Severalnines</p>",
        "content_snippet": "<p>Content for Open Source Database HA Resources from Severalnines</p>",
        "creator": "Forrest Lymburner",
        "feedTitle": "High Scalability",
        "feed_id": "5b33c76cb2438d5708dc197e",
        "guid": "426227:4867632:36078004",
        "has_read": false,
        "link": "http://feedproxy.google.com/~r/HighScalability/~3/FFJQudxO2bU/open-source-database-ha-resources-from-severalnines.html",
        "publish_date": "2018-06-08T19:46:22.000Z",
        "timeAgo": "a month ago",
        "title": "Open Source Database HA Resources from Severalnines",
      },
    },
    "type": "FILTER_SET_DATA",
  },
]
`;
